fixed floor selector alignment

--- a/src/components/FloorNav/styles.css
+++ b/src/components/FloorNav/styles.css
@@ -1,10 +1,7 @@
 .floor-nav-wrapper {
   position: fixed;
-  left: 12%;
+  left: 60px;
   top: 25%;
-  text-align: center;
-  z-index: 5;
-  transform: translateX(-50%);
 }
 
 .floor-nav {
